--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/express": "4.17.2",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
-    "@types/react-router": "5.1.3",
+    "@types/react-router-dom": "5.1.3",
     "html-webpack-plugin": "3.2.0",
     "nodemon": "2.0.2",
     "postcss": "7.0.26",
@@ -26,6 +26,8 @@
     "webpack-cli": "3.3.10"
   },
   "scripts": {
+    "start": "npx nodemon --exec ts-node ./server.ts",
+    "webpack": "npx webpack --watch",
     "css": "npx postcss --watch -o ./dist/main.css ./src/public/css/main.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
